Update minor css and javascript issues. - Update editable field when time slot is added or deleted. - Fix account dialog position overflow.

--- a/static/css/article.css
+++ b/static/css/article.css
@@ -54,11 +54,13 @@ body
     height: 386px;
     display: table-cell;
     vertical-align: middle;
+    width: 600px;
+    text-align: center;
 }
 
 #article_image img
 {
-    width: 600px;
+    max-width: 600px;
 }
 
 #article_content
